--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/styled-components": "4.4.2",
     "@types/uuid": "3.4.6",
     "immutability-helper": "^3.0.1",
+    "moment": "^2.27.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-scripts": "3.3.0",
@@ -23,7 +24,7 @@
     "uuid": "3.4.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "yarn start-no-cache",
     "start-no-cache": "react-scripts start --no-cache",
     "build": "INLINE_RUNTIME_CHUNK=false react-scripts build",
     "test": "react-scripts test",
