--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,12 +5,12 @@
   "manifest_version": 2,
   "permissions": ["storage", "activeTab", "tabs", "https://relay.amazon.com/"],
   "browser_action": {
-    "default_popup": "./assets/index.html"
+    "default_popup": "./index.html"
   },
   "content_scripts": [
     {
       "matches": ["https://relay.amazon.com/tours/loadboard*"],
-      "js": ["./assets/content.js"]
+      "js": ["./content.js"]
     }
   ]
 }
