--- a/Popup/package.json
+++ b/Popup/package.json
@@ -22,7 +22,8 @@
     "react-scripts": "3.3.0",
     "styled-components": "5.0.0",
     "typescript": "3.7.5",
-    "uuid": "3.4.0"
+    "uuid": "3.4.0",
+    "storage": "file:../Shared"
   },
   "scripts": {
     "start": "yarn start-no-cache",
