--- a/Content/package.json
+++ b/Content/package.json
@@ -14,6 +14,8 @@
     "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
-    "@types/chrome": "0.0.116"
+    "@types/chrome": "0.0.116",
+    "gulp": "^4.0.2",
+    "gulp-watch": "^5.0.1"
   }
 }
