--- a/Popup/package.json
+++ b/Popup/package.json
@@ -15,15 +15,16 @@
     "@types/react-dom": "16.9.4",
     "@types/styled-components": "4.4.2",
     "@types/uuid": "3.4.6",
+    "dayjs-ext": "^2.2.0",
     "immutability-helper": "^3.0.1",
     "moment": "^2.27.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-scripts": "3.3.0",
+    "storage": "file:../Shared",
     "styled-components": "5.0.0",
     "typescript": "3.7.5",
-    "uuid": "3.4.0",
-    "storage": "file:../Shared"
+    "uuid": "3.4.0"
   },
   "scripts": {
     "start": "yarn start-no-cache",
