--- a/Popup/package.json
+++ b/Popup/package.json
@@ -17,6 +17,7 @@
     "@types/uuid": "3.4.6",
     "dayjs-ext": "^2.2.0",
     "immutability-helper": "^3.0.1",
+    "js-sha256": "^0.9.0",
     "moment": "^2.27.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
