Added iteration content

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,6 +7,7 @@
   "content_scripts": [
     {
       "matches": ["https://relay.amazon.com/tours/loadboard*"],
+      "run_at": "document_start",
       "js": ["./content.js"]
     }
   ]
