--- a/plugin/manifest.json
+++ b/plugin/manifest.json
@@ -10,5 +10,8 @@
       "run_at": "document_start",
       "js": ["./content.js"]
     }
-  ]
+  ],
+  "browser_action": {
+    "default_popup": "/popup/index.html"
+  }
 }
