Added filtering pipelined logic and first filter for stops count with hard coded data

--- a/plugin/manifest.json
+++ b/plugin/manifest.json
@@ -8,7 +8,7 @@
     {
       "matches": ["https://relay.amazon.com/tours/loadboard*"],
       "run_at": "document_start",
-      "js": ["./content.js"]
+      "js": ["./content/content.js"]
     }
   ],
   "browser_action": {
