--- a/Popup/package.json
+++ b/Popup/package.json
@@ -31,6 +31,7 @@
     "start": "yarn start-no-cache",
     "start-no-cache": "react-scripts start --no-cache",
     "build": "INLINE_RUNTIME_CHUNK=false react-scripts build && node after-build.ts",
+    "build-w": "set INLINE_RUNTIME_CHUNK=false react-scripts build && node after-build.ts",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "eslint": "eslint 'src/**/*.ts{,x}'",
