--- a/Popup/package.json
+++ b/Popup/package.json
@@ -22,6 +22,7 @@
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-scripts": "3.3.0",
+    "react-swipeable-views": "^0.13.9",
     "storage": "file:../Shared",
     "styled-components": "5.0.0",
     "typescript": "3.9.5",
@@ -56,12 +57,12 @@
     "@typescript-eslint/eslint-plugin": "^2.16.0",
     "@typescript-eslint/parser": "^2.16.0",
     "chalk": "^4.1.0",
-    "ncp": "^2.0.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.0",
-    "eslint-plugin-react-hooks": "^1.7.0"
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "ncp": "^2.0.0"
   }
 }
